fix(select): move alignment of placeholder text (#259)

--- a/src/styles/grid-form-builder.css
+++ b/src/styles/grid-form-builder.css
@@ -288,6 +288,10 @@ div.gfb-input__value-container--is-multi.gfb-input__value-container {
   height: 100%;
 }
 
+div.gfb-input__placeholder {
+  top: 10px;
+}
+
 div.multiselect-focus.gfb-has-focus {
   position: absolute;
   width: 100%;
